# ScripturaAI

./: .gitignore  README.md
backend/: .gitignore  ai.py  fileIO.py  github_routes.py  main.py  mkdocs.yml  pyproject.toml  util.py
backend/adi/: mkdocs.yml
backend/adi/docs/: ayandeb.md  create.md  main.md
backend/jaspers-website/: mkdocs.yml
backend/jaspers-website/docs/: bidirectionItr.md  constantItr.md  forwardItr.md  inputItr.md  nonMemberstdBeginEnd.md
backend/my-site/: mkdocs.yml
backend/my-site/docs/: algorithm.md  generatedMarkdown.md  generatedMarkdown1.md  generatedMarkdown2.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: page.shah.tsx  page.tsx
frontend/src/app/editor/: page.tsx
frontend/src/components/: Mermaid.jsx  single-code.tsx
frontend/src/components/github-code/: GithubCode.tsx
frontend/src/components/github-website/: GithubWebsite.tsx
frontend/src/components/single-code/: SingleCode.tsx  SingleCodeOutput.tsx  types.d.ts
frontend/src/components/ui/: CodeEditor.tsx  button.tsx  fake-progress.tsx  progress.tsx
frontend/src/components/upload-code/: DownloadCode.tsx  UploadCode.tsx
frontend/src/lib/: actions.ts  api.ts  config.ts  types.d.ts  utils.ts
hacksmith-vsce/: CHANGELOG.md  README.md  extension.js  package.json  pnpm-lock.yaml
